colcon_ws/log/build_2025-05-30_10-03-34/volcano_ark_ros/stderr.log
  File "/root/colcon_ws/install/volcano_ark_ros/lib/python3.10/site-packages/volcano_ark_ros/web_interface_node.py", line 358
    """
       ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xed in position 13363: invalid continuation byte

